5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1692_1107.log
== TEST (2019-05-02 13:18:01) 
-- CODE:
x = int(input("digite o numero do dia de hoje: "))
y = int(input("digite um numero de dias: "))
if x = 0 and 6 >= y >= 0:
	
-- ERROR:
File "XXXX", line 3
    if x = 0 and 6 >= y >= 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:18:07) 
-- CODE:
x = int(input("digite o numero do dia de hoje: "))
y = int(input("digite um numero de dias: "))
if x == 0 and 6 >= y >= 0:
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:18:12) 
-- CODE:
x = int(input("digite o numero do dia de hoje: "))
y = int(input("digite um numero de dias: "))
if x == 0 and 6 >= y >= 0:
-- ERROR:
File "XXXX", line 4
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:58:23) 
-- CODE:
x=int(input("escolha o numero: "))
y=int(input("numero de dias apos: "))
z=x+(y%7)-7
if(x>=0) and (x<=6) and (x==6) and (z==6):
	print("Hoje eh sabado e o dia futuro eh sabado")
elif(x==5) and (z==6)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh sabado")
elif(x==4) and (z==6)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh sabado")
elif(x==3) and (z==6)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh sabado")
elif(x==2) and (z==6)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh sabado")
elif(x==1) and (z==6)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh sabado")
elif(x==0) and (z==6)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh sabado")
		

elif(x==6) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh sabado e o dia futuro eh sexta")
elif(x==5) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh sexta")
elif(x==4) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh sexta")
elif(x==3) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh sexta")
elif(x==2) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh sexta")
elif(x==1) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh sexta")
elif(x==0) and (z==5)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh sexta")
		
elif(x==6) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh sabado e o dia futuro eh quinta")
elif(x==5) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh quinta")
elif(x==4) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh quinta")
elif(x==3) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh quinta")
elif(x==2) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh quinta")
elif(x==1) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh quinta")
elif(x==0) and (z==4)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh quinta")
		
elif(x==6) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh sabado e o dia futuro eh quarta")
elif(x==5) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh quarta")
elif(x==4) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh quarta")
elif(x==3) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh quarta")
elif(x==2) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh quarta")
elif(x==1) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh quarta")
elif(x==0) and (z==3)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh quarta")
		
		
elif(x==6) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh sabado e o dia futuro eh terca")
elif(x==5) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh terca")
elif(x==4) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh terca")
elif(x==3) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh terca")
elif(x==2) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh terca")
elif(x==1) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh terca")
elif(x==0) and (z==2)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh terca")
		
elif(x==6) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh sabado e o dia futuro eh segunda")
elif(x==5) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh segunda")
elif(x==4) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh segunda")
elif(x==3) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh segunda")
elif(x==2) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh segunda")
elif(x==1) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh segunda")
elif(x==0) and (z==1)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh segunda")
		
		
elif(x==6) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh sabado e o dia futuro eh domingo")
elif(x==5) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh sexta e o dia futuro eh domingo")
elif(x==4) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh quinta e o dia futuro eh domingo")
elif(x==3) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh quarta e o dia futuro eh domingo")
elif(x==2) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh terca e o dia futuro eh domingo")
elif(x==1) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh segunda e o dia futuro eh domingo")
elif(x==0) and (z==0)and (x>=0) and (x<=6):
	print("Hoje eh domingo e o dia futuro eh domingo")
else:
	print("A entrada", x, "eh invalida")
-- EXECUTION TIME:
0.154481
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
